			Java Electric change log

IMP: (9/3/04, RK) Allow Hierarchical NCC from 2 windows

************************* Version 8.01l: *********************************

FIX: (9/8/04, JKG) Fixes to logical effort algorithms: mfactors on uncached
     alg, cap values on both algs, made compatible with diffn/diffp of old style gates

FIX: (9/8/04, JKG) CellGroup changes now in Undo system; explorer tree
     redraws on change; cell group dialog sorts groups list

IMP: (9/2/04, SMR) Small text is now drawn "greek" and is selectable.

BUG: (9/2/04, SMR) Port text is not the right size.
FIX: In PixelDrawing.showCellPorts(), use size from the actual Export.

IMP: (9/2/04, GVG) Better handling of collections of simple polygons and rings for 
enclosure area checking.

BUG: (9/2/04, GVG) Clipboard crashes if list in copyListToCell contains Exports
FIX: Temporary fix to avoid the exception, non-Geometric objects are ignored.

IMP: (9/2/04, SMR) Removed printer choice from "Printing" tab of "Preferences".

BUG: (9/1/04, GVG) Artwork arcs don't have network associated then modification in StatusBar crashes
FIX: Get Network information only when network is not null.

BUG: (9/1/04, SMR) Changes to the number-of-degrees of a circle don't update the node bounds.
FIX: Added ElectricObject.checkPossibleVariableEffects()" and an override in NodeInst.

BUG: (9/1/04, SMR) Thick lines may cause crashes.
FIX: In PixelDrawing.drawThickPoint(), test X and Y indices properly.

BUG: (9/1/04, SMR) Printing crashes if no printers are defined.
FIX: Check for valid default printer in "IOTool.getCachePrinterName()".

BUG: (8/31/04, SMR) Changing the case of an export (in Export/Rename) doesn't work.
FIX: In Export.rename(), allow case-changes without thinking that it is an existing export.

BUG: (8/31/04, SMR) Waveform window crashes when "Down Hierarchy" or "Up Hierachy" commands are used.
FIX: Ignore these commands: they don't apply to the waveform window.
